# chirtian-bot

./: .env.example  .gitignore  .mcp.json  AGENTS.md  Dockerfile  SETUP.md  config.yaml  docker-compose.test.yml  docker-compose.yml  fix-2026-posts.mjs  fix_titles.py  pyproject.toml  未命名.md
christian_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
memory/: MEMORY.md  pitfalls.md  session-bridge.md
openspec/: .corgi-install-report.md  .corgi-install.json  config.yaml
scripts/: probe_broker_support.py  substack-diagnose-copy.mjs  substack-extract-copied-profile.mjs  substack-login-chrome.mjs  sync_positions.py  webull_json.py
src/analyzer/: __init__.py  context_loader.py  decision_fusion.py  llm_client.py  parser.py  ta_gateway.py  (+3 more)
tests/: conftest.py  test_buying_power.py  test_confirmation.py  test_daemon.py  test_dashboard.py  test_decision_fusion.py  test_executor_integration.py  test_executor_models.py  test_idempotency.py  test_ingestion_poll.py  test_ledger.py  test_llm_client.py  test_notify.py  test_orchestrator.py  test_order_builder.py  test_parser.py  test_parser_crosscheck.py  test_parser_schema.py  test_portfolio_integration.py  test_portfolio_models.py  test_provider.py  test_queue.py  test_reconcile.py  test_rollback_drill.py  test_run_record.py  test_runtime_guard.py  test_safety_integration.py  test_shadow_drill.py  test_shadow_e2e.py  test_shadow_metrics.py  test_shadow_pipeline_adapter.py  test_shadow_runner.py  test_sizing.py  test_ta_gateway.py  test_webull_account_provider.py  test_webull_adapter.py
wiki/: hot.md  index.md
(+1602 files in other folders)
